--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>Vite + React + TS</title>
+    <title>todo</title>
   </head>
   <body>
     <div id="root"></div>
